fix compile issues